<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/download"
    tools:context="com.example.als.guiadebolsoaudio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFrutas"
            style="@style/StyleList"
            android:background="@color/colorPrimaryPort"
            android:contentDescription="@string/descricao_frutas"
            android:text="@string/frutas"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnParentes"
            style="@style/StyleList"
            android:background="@color/colorPrimaryIngles"
            android:contentDescription="@string/descricao_parentes"
            android:text="@string/parentes"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNumeros"
            style="@style/StyleList"
            android:background="@color/colorPrimaryAlemao"
            android:contentDescription="@string/descricao_numeros"
            android:text="@string/numeros"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnExpressoes"
            style="@style/StyleList"
            android:background="@color/colorPrimaryFrances"
            android:contentDescription="@string/descricao_expressoes"
            android:text="@string/expressoes"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/txtInic"
            style="@style/StyleMusic"
            android:text="@string/txt_inicio" />

        <SeekBar
            android:id="@+id/seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtFim"
            style="@style/StyleMusic"
            android:text="@string/txt_fim" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnPlay"
            style="@style/StyleButtonMusic"
            android:text="@string/btn_play"/>

        <Button
            android:id="@+id/btnPause"
            style="@style/StyleButtonMusic"
            android:text="@string/btn_pause"/>

        <Button
            android:id="@+id/btnStop"
            style="@style/StyleButtonMusic"
            android:text="@string/btn_stop"/>
        
    </LinearLayout>

</LinearLayout>
